--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,14 @@ body {
     text-wrap: balance;
   }
 }
+
+@media screen and (max-width: 330px) {
+  .hero-text {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 285px) {
+  .hero-text {
+    font-size: 45px;
+  }
+}
