--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #ffffff;
   /* --foreground: #171717; */
-  --foreground: #110f10;
+  --foreground: #14161c;
 }
 body {
   background: var(--foreground);
